--- a/Scarb.toml
+++ b/Scarb.toml
@@ -5,12 +5,11 @@ edition = "2024_07"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 [dependencies]
-starknet = "2.11.2"
-cairo_execute = "2.11.2+nightly-2025-03-12"
+starknet = "2.11.4"
 
 [dev-dependencies]
 snforge_std = "0.38.0"
-assert_macros = "2.11.2"
+assert_macros = "2.11.4"
 
 [[target.starknet-contract]]
 sierra = true
@@ -20,8 +19,6 @@ test = "snforge test"
 
 [tool.scarb]
 allow-prebuilt-plugins = ["snforge_std"]
-[cairo]
-enable-gas = true
 
 # Visit https://foundry-rs.github.io/starknet-foundry/appendix/scarb-toml.html for more information
 
@@ -45,10 +42,10 @@ enable-gas = true
 # url = "http://your.third.rpc.url"
 # block_id.hash = "0x123"                                    # Block to fork from (block hash)
 
-# [profile.dev.cairo]                                        # Configure Cairo compiler
-# unstable-add-statements-code-locations-debug-info = true   # Should be used if you want to use coverage
-# unstable-add-statements-functions-debug-info = true        # Should be used if you want to use coverage/profiler
-# inlining-strategy = "avoid"                                # Should be used if you want to use coverage
+[profile.dev.cairo]                                          # Configure Cairo compiler
+unstable-add-statements-code-locations-debug-info = true     # Should be used if you want to use coverage
+unstable-add-statements-functions-debug-info = true          # Should be used if you want to use coverage/profiler
+inlining-strategy = "avoid"                                  # Should be used if you want to use coverage
 
 # [features]                                                 # Used for conditional compilation
 # enable_for_tests = []                                      # Feature name and list of other features that should be enabled with it
